[gd_scene load_steps=3 format=3 uid="uid://dffb0b2pdc4v6"]

[ext_resource type="Script" path="res://Scripts/UI/QuestListUI.gd" id="1_pkhrm"]
[ext_resource type="Theme" uid="uid://bds43817l36ra" path="res://Assets/Styles/menuStyle.tres" id="2_2c72x"]

[node name="QuestListUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
script = ExtResource("1_pkhrm")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -333.0
offset_bottom = 231.0
grow_horizontal = 0
mouse_filter = 2
mouse_force_pass_scroll_events = false

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 14.0
offset_right = -18.0
grow_horizontal = 2
grow_vertical = 2

[node name="FishermanQuest" type="RichTextLabel" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("2_2c72x")
bbcode_enabled = true
text = "[right]Help fisherman"
fit_content = true

[node name="BabushkaQuest" type="RichTextLabel" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("2_2c72x")
bbcode_enabled = true
text = "[right]Help your neighbour"
fit_content = true

[node name="SnowboardQuest" type="RichTextLabel" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("2_2c72x")
bbcode_enabled = true
text = "[right]Challenge with Bob"
fit_content = true

[node name="TaikoQuest" type="RichTextLabel" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("2_2c72x")
bbcode_enabled = true
text = "[right]Help a band"
fit_content = true
